full-design-image-editting-project/src/components/PhotoEditorSidebar/PhotoEditorSidebar.css
/* Sidebar Layout */
.editor-sidebar {
   display: flex;
   flex-direction: column;
   width: 22rem;
   background-color: var(--color-white);
   border-left: 1px solid #f4f3f0;
   z-index: 20;
}

/* Tabs */
.tab-header {
   display: flex;
   border-bottom: 1px solid #f4f3f0;
}

.tab-button {
   flex: 1;
   padding: var(--padding-md) 0;
   font-size: var(--font-size-sm);
   font-weight: 800;
   color: var(--text-gray);
   background: none;
   border: none;
   border-bottom: 2px solid transparent;
   cursor: pointer;
   transition: all 0.2s;
}

.tab-button:hover {
   background-color: #f9fafb;
   color: #374151;
}

/* --- tab button when clicked --- */
.tab-button.active {
   color: #111827;
   font-weight: 600;
   border-bottom-color: var(--text-primary-dark); /* Replace with your primary color */
}

/* Content Area */
.sidebar-content {
   display: flex;
   flex-direction: column;
   gap: var(--gutter-sm);
   overflow-y: auto; /* Make it's inside content scrollable */
   padding: var(--padding-xs);
}

/* =================
slider
==================*/
.slider-stack {
   display: flex;
   flex-direction: column;
   gap: var(--gutter-md);
   margin-top: var(--margin-md);
}

.slider-container {
   display: flex;
   flex-direction: column;
   gap: var(--gutter-md);
}

.slider-info {
   display: flex;
   justify-content: space-between;
   font-weight: 500;
   color: #6b7280;
}

.slider-info span {
   font-size: var(--font-size-sm);
}

/* ===============
presets
================= */
.control-group {
   background-color: #fff;
   border-radius: 12px;
   border: 1px solid #f3f4f6;
   padding: var(--padding-sm);
   margin-bottom: 24px;
   box-shadow: var(--box-shadow-soft);
}

.filter-grid {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(3, 5.8rem);
   grid-template-rows: repeat(2, 7rem);
   gap: var(--gutter-md); /* Optional: adds spacing between items */
   aspect-ratio: 1 / 1;
}

.preset-card {
   background-color: var(--bg-light);

   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 8px;
   padding: 8px;
   border-radius: 8px;
   border: 1px solid #b6b6b6c4;
   /* background: none; */
   cursor: pointer;
   transition: background 0.2s;
}

.preset-card.active {
   border-color: var(--text-primary);
   background-color: rgba(0, 0, 0, 0.05);
}

.filter-preview {
   width: 100%;
   aspect-ratio: 1/1;
   border-radius: 4px;
   overflow: hidden;
   position: relative;
   background-color: var(--bg-checkerboard);
}

.preview-image {
   background-image: -webkit-image-set(
      url("/public/background-image/presets-backgroundImage.webp") 1x,
      url("/public/background-image/presets-backgroundImage.webp") 2x
   );
   background-image: image-set(
      url("/public/background-image/presets-backgroundImage.webp") 1x,
      url("/public/background-image/presets-backgroundImage.webp") 2x
   );
   width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
}

/* Footer */
.sidebar-footer {
   padding: 16px;
   border-top: 1px solid #f4f3f0;
}

.btn-auto-enhance {
   width: 100%;
   padding: 10px;
   border-radius: 8px;
   background-color: #111827;
   color: white;
   font-size: 14px;
   font-weight: 700;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
   border: none;
   cursor: pointer;
   transition: background 0.2s;
}

.btn-auto-enhance:hover {
   background-color: #1f2937;
}

/* Add this to your CSS file */

.menubar {
   border: none;
   background-color: transparent;
   display: none;
   cursor: pointer;

   .menu-container {
      width: 30px;
      height: 30px;
      display: flex;
      flex-direction: column;
      justify-content: space-around;

      .bar {
         width: 100%;
         height: 3px;
         background-color: black;
         transition: all 0.3s ease-in-out;
         border-radius: 2px;
      }

      /* Transform logic */
   }
   .open .bar:nth-child(1) {
      transform: translateY(10.3px) rotate(45deg);
   }

   .open .bar:nth-child(2) {
      opacity: 0;
      transform: translateX(20px);
   }

   .open .bar:nth-child(3) {
      transform: translateY(-10.3px) rotate(-45deg);
   }
}

/* --- Tablet & Mobile (Everything 900px and below) --- */
@media (width <= 900px) {
   .editor-sidebar {
      position: fixed;
      right: 0;
      z-index: 1000000;
      height: calc(100vh - 53px);
      /* width: 300px; Default width for tablets */
      transform: translateX(100%);
      transition: transform 0.3s ease-in-out;
   }

   /* This toggle now works for ALL screens under 900px */
   .editor-sidebar-open {
      transform: translateX(0);
   }

   .menubar {
      display: block;
      position: absolute;
      top: 0.8em;
      right: 0.8em;
   }
}

/* --- Specific Mobile Tweaks (Everything below 490px) --- */
@media (width < 490px) {
   .editor-sidebar {
      width: 15rem; /* Shrinks the sidebar for small phones */
   }

   .sidebar-content {
      padding: 0;
   }

   /* Typography adjustments for small screens */
   .slider .slider-info span {
      font-size: var(--font-size-xs);
   }

   .slider-info label {
      font-size: var(--font-size-sm);
   }

   .card {
      padding: var(--padding-sm);
      margin: var(--margin-sm);
   }

   .card h1 {
      font-size: var(--font-size-md);
   }

   .filter-grid {
      grid-template-columns: repeat(2, 5.8rem);
      grid-template-rows: repeat(2, 7rem);
      gap: var(--gutter-sm);
      aspect-ratio: 1 / 1;
   }

   .menubar {
      right: 0.5em;
   }
}

